<resources>
    <string name="app_name">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourits">favourits</string>
    <string name="alarms">alarms</string>
    <string name="settings">settings</string>
    <string name="lang">language</string>
    <string name="en">English</string>
    <string name="ar">Arabic</string>
    <string name="location">location</string>
    <string name="Wind_Speed">Wind Speed</string>
    <string name="MS">Meter / Sec</string>
    <string name="MH">Mile / Hour</string>
    <string name="temp">Temperature</string>
    <string name="F">Fahrenheit</string>
    <string name="C">Celsius</string>
    <string name="Humidity">Humidity</string>
    <string name="K">Kelvin</string>
    <string name="Wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="Description">Description</string>
    <string name="notif">Notification</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="now">Now</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="GPS">GPS</string>
    <string name="map">Map</string>
    <string name="alrms">Alarms</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="city">city</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="fav">Favorite</string>
    <string name="addfav">Add Favorite</string>
    <string name="Settings">Settings</string>
    <string name="Location">Location</string>
    <string name="Map">Map</string>
    <string name="expire">there is no internet connection to check</string>
    <string name="request_GPS_permissions">request GPS permissions</string>
    <string name="faild_GPS_permissions">failed to get  GPS permissions</string>
    <string name="please_Give_GPS_permissions">please Give us GPS permissions</string>
    <string name="cloud">"cloud "</string>
    <string name="windspeed">wind speed</string>
    <string name="speed">speed</string>
    <string name="visibility">visibility</string>
    <string name="Date">Date</string>
    <string name="conf">initialize configurations</string>
    <string name="conf_msg">save</string>
    <string name="open_location_settings">open location</string>
    <string name="no_loc_av">location no available in your device</string>
    <string name="start_data">start date</string>
    <string name="end_date">end date</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="save">Save</string>
    <string name="dismiss">dismiss</string>
    <string name="plzinsertdate">please insert date</string>
    <string name="Alarm">Alarm</string>
    <string name="req">request display over app permession</string>
    <string name="reeq">please give us request display over app permession</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="doyouwantdelteit">do you realy want to delelte it</string>
    <string name="no_data_found">no data found</string>
    <string name="no_name">cannot get name for that location</string>

</resources>